--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,29 @@
     transform: translate(-50%, -90%);
 }
 
+.loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #a9a9a9;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -90%)
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .quote-list {
     display: flex;
     flex-wrap: wrap;
