--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
         top: 0;
         transform: translate(-50%)
     }
+
+    .letter-input-stack {
+        margin-top: 1.4em;
+    }
 }
 
 .loader {
